[build-system]
requires = ["setuptools"]

[project]
name = "paramiko-jump"
version = "0.1.0"
dependencies = [
    "paramiko >= 3.4.0",
]
requires-python = ">=3.6"
authors = [ {name = "Andrew Schenck", email = "aschenck@gmail.com"} ]
maintainers = [ {name = "Andrew Schenck", email = "aschenck@gmail.com"} ]
description="Paramiko + jump host (SSH proxy) + multi-factor authentication simplified."
readme = "README.md"

[project.urls]
repository = "https://github.com/andrewschenck/paramiko-jump"
