[build-system]
requires = ["setuptools"]

[project]
name = "paramiko-jump"
version = "0.1.3"
dependencies = [
    "paramiko >= 3.4.0",
]
requires-python = ">=3.6"
authors = [
    {name = "Andrew Schenck", email = "aschenck@gmail.com"},
    {name = "Tyler Bruno", email = "tybruno117@gmail.com"},
]
maintainers = [ {name = "Andrew Schenck", email = "aschenck@gmail.com"} ]
description="Paramiko extension providing support for 2FA / MFA, SSH Proxying"
readme = "README.md"

[project.urls]
repository = "https://github.com/andrewschenck/paramiko-jump"
